# 2021Fall-PhotonMapping

./: CMakeLists.txt  README.md  run_all.sh
include/: camera.hpp  group.hpp  hit.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  photon.hpp  photonmapping.hpp  plane.hpp  ray.hpp  scene_parser.hpp  sphere.hpp  transform.hpp  triangle.hpp
material/: Wine_bottle.mtl  blue.ppm  green.ppm  obj.mtl  red.ppm  woodfloor.ppm
src/: image.cpp  main.cpp  mesh.cpp  scene_parser.cpp
testcases/: caustics.txt  scene01_basic.txt  scene05_bunny_200.txt  test_wine_bottle.txt
